--- a/src/scss/blocks/main-header.scss
+++ b/src/scss/blocks/main-header.scss
@@ -1,17 +1,38 @@
+.header-nav * {
+  @include lineout(magenta);
+}
+
 .header-nav {
-  @include lineout(green);
   display: flex;
   flex-direction: row;
+  height: 66px;
+}
+
+.logo {
+  // margin-right: auto;
+  flex-grow: 2;
+}
+
+.logo__img-container {
+  display: flex;
+  height: 100%;
+  flex-direction: row;
+  align-items: center;
+}
+
+.logo__title {
+  margin: 0 auto;
 }
 
 .site-nav {
+  display: flex;
+  align-items: center;
   &:before {
     content: "";
     display: block;
     width: 24px;
     height: 18px;
-    background-image: url('@img/burger-menu.svg');
-    background-color: rgba(green, 0.5);
+    background-image: url("../img/burger-menu.svg");
     background-repeat: no-repeat;
     background-position: center;
   }
