--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,49 +1,49 @@
 @font-face {
-                font-family: ArialMT;
+                font-family: 'ArialMT';
                 font-display: swap;
-                src: url("../fonts/ArialMT.woff2") format("woff2"), url("../fonts/ArialMT.woff") forman("woff");
+                src: url("../fonts/ArialMT.ttf") format('truetype');
                 font-weight: 400;
                 font-style: normal;
             }
 @font-face {
-                font-family: Oswald;
+                font-family: 'Oswald';
                 font-display: swap;
-                src: url("../fonts/Oswald-Bold.woff2") format("woff2"), url("../fonts/Oswald-Bold.woff") forman("woff");
+                src: url("../fonts/Oswald-Bold.ttf") format('truetype');
                 font-weight: 700;
                 font-style: normal;
             }
 @font-face {
-                font-family: Oswald;
+                font-family: 'Oswald';
                 font-display: swap;
-                src: url("../fonts/Oswald-ExtraLight.woff2") format("woff2"), url("../fonts/Oswald-ExtraLight.woff") forman("woff");
+                src: url("../fonts/Oswald-ExtraLight.ttf") format('truetype');
                 font-weight: 200;
                 font-style: normal;
             }
 @font-face {
-                font-family: Oswald;
+                font-family: 'Oswald';
                 font-display: swap;
-                src: url("../fonts/Oswald-Light.woff2") format("woff2"), url("../fonts/Oswald-Light.woff") forman("woff");
+                src: url("../fonts/Oswald-Light.ttf") format('truetype');
                 font-weight: 300;
                 font-style: normal;
             }
 @font-face {
-                font-family: Oswald;
+                font-family: 'Oswald';
                 font-display: swap;
-                src: url("../fonts/Oswald-Medium.woff2") format("woff2"), url("../fonts/Oswald-Medium.woff") forman("woff");
+                src: url("../fonts/Oswald-Medium.ttf") format('truetype');
                 font-weight: 500;
                 font-style: normal;
             }
 @font-face {
-                font-family: Oswald;
+                font-family: 'Oswald';
                 font-display: swap;
-                src: url("../fonts/Oswald-Regular.woff2") format("woff2"), url("../fonts/Oswald-Regular.woff") forman("woff");
+                src: url("../fonts/Oswald-Regular.ttf") format('truetype');
                 font-weight: 400;
                 font-style: normal;
             }
 @font-face {
-                font-family: Oswald;
+                font-family: 'Oswald';
                 font-display: swap;
-                src: url("../fonts/Oswald-SemiBold.woff2") format("woff2"), url("../fonts/Oswald-SemiBold.woff") forman("woff");
+                src: url("../fonts/Oswald-SemiBold.ttf") format('truetype');
                 font-weight: 600;
                 font-style: normal;
             }
