--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,5 +5,12 @@
 
 
 @import "blocks/main-header.scss";
+@import "blocks/promo.scss";
+@import "blocks/button.scss";
+@import "blocks/programs.scss";
+@import "blocks/link.scss";
+@import "blocks/food-line.scss";
+@import "blocks/mechanism.scss";
+
 
 
