--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,12 +5,20 @@
 
 
 @import "blocks/main-header.scss";
+@import "blocks/logo.scss";
+@import "blocks/site-nav.scss";
 @import "blocks/promo.scss";
 @import "blocks/button.scss";
 @import "blocks/programs.scss";
 @import "blocks/link.scss";
 @import "blocks/food-line.scss";
 @import "blocks/mechanism.scss";
-
+@import "blocks/example.scss";
+@import "blocks/results.scss";
+@import "blocks/toggle.scss";
+@import "blocks/main-footer.scss";
+@import "blocks/logo.scss";
+@import "blocks/socials.scss";
+@import "blocks/developer.scss";
 
 
