--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,13 +1,17 @@
 $color-font-1: black;
 $color-font-2: white;
+$color-font-3: #444444;
 
 $bgcolor: #68B738;
 $bgcolor-2: #D9D9D9;
 $bgcolor-1: white;
+$bgcolor-3: #EAEAEA;
+$bgcolor-4: #CDCDCD;
+$bgcolor-5: #f2f2f2;
 
 $color-1: #D9D9D9;
-
-
+$color-2: #666666;
+$color-3: #e6e6e6;
 
 $button-height: 40px;
 $font-size-small: 14px; 
