--- a/src/scss/blocks/mechanism.scss
+++ b/src/scss/blocks/mechanism.scss
@@ -1,5 +1,5 @@
 .mechanism {
-  margin-bottom: 20px;
+  margin-bottom: 43px;
 }
 .mechanism * {
   @include lineout(royalblue);
@@ -50,6 +50,9 @@
   background-image: url("../img/icon-eat.svg");
 }
 
-.mechanism__step:nth-child(4)::before {
-  background-image: url("../img/icon-alarm.svg");
+.mechanism__step:nth-child(4){
+  margin-bottom: 0px;
+  &::before {
+    background-image: url("../img/icon-alarm.svg");
+  }
 }
