--- a/src/scss/mixin.scss
+++ b/src/scss/mixin.scss
@@ -1,5 +1,6 @@
 @mixin lineout ($color: darkorange){
-	outline: 1px dashed $color;
+	// outline: 1px dashed $color;
+	outline: 1px dashed transparent;
 	outline-offset: -1px;
 	// background-color: rgba(70, 130, 180, 0.5);
 }
@@ -8,7 +9,7 @@
 	font-family: "Oswald", Arial, sans-serif;
 	font-weight: 400;
   font-style: normal;
-	font-size: 1.25em;
+	font-size: 1.25em; //17.5
 	line-height: 1em;
 }
 
