--- a/src/scss/blocks/developer.scss
+++ b/src/scss/blocks/developer.scss
@@ -1,18 +1,35 @@
 .developer {
+  width: 100%;
+
+}
+
+.developer__link {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: flex-start;
   padding-top: 20px;
 
-}
-.developer__title,
-.developer__logo {
-  display: block;
-}
+  &:hover .logo-html-svg {
+    fill: $bgcolor;
+  }
 
+  &:active .developer__title, 
+  &:active .logo-html-svg {
+    opacity: 0.3;
+  }
+}
 .developer__title {
+  margin: 0px;
+  padding: 0px;
   @include plaint-text;
   font-size: 1.14em;
   line-height: 1.31em;
+  display: inline-block;
+  padding-top: 8px;
+  padding-bottom: 28px;
+}
+
+.developer__logo {
+  display: block;
 }
